--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -234,6 +234,10 @@ body a {
 			width: 25px;
 		}
 
+		@include mobileMdMin-block {
+			margin-bottom: 5px;		
+		}
+
 		.menu-burger_line {
 			width: 100%;
 			height: 2px;
@@ -834,8 +838,9 @@ body a {
 	& .swiper-container {
 		@include col();
 		@include size(9);
+		@include size-smMin(11);
 		margin: 0 auto;
-		margin-bottom: 40px;
+		margin-bottom: 20px;
 	}
 
 	&_review {
@@ -889,7 +894,7 @@ body a {
 			@include size-smMin(8);
 			@include size-mobileLg(10);
 			@include mobileLg-block {
-				font-size: 20px;
+			font-size: 20px;
 			}
 		}
 
@@ -899,7 +904,6 @@ body a {
 			@include size(6);
 			@include size-smMin(8);
 			@include size-mobileLg(11);
-			margin-bottom: 30px;
 		}
 	}
 
